[package]
name = "meowlouder"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
#color-eyre = "0.6"
anyhow = "1"
meowlouder-opus = { path = "../opus" }
